# aquabot_mppi

./: .gitignore  README.md
aquabot_description/urdf/: aquabot.urdf  document.txt
aquabot_ekf/: CMakeLists.txt  package.xml
aquabot_ekf/launch/: ekf_launch.py
aquabot_motion/: CMakeLists.txt  package.xml
aquabot_motion/src/: .gitignore  README.md  astar.py  bitangents.py  follower.py  mission_turbines.py  motion_node.cpp  motionnode_with_rviz.cpp  mppi_kernels.cu  planner.py  qr_reader.py
docs/plots/: csv_2_plot.py
docs/plots/full_run/: run_data.csv
docs/plots/obstacle_avoidance/: run_data_avoidance.csv
